modifies issues index to center alignment to match homepage

--- a/assets/css/cdrs.css
+++ b/assets/css/cdrs.css
@@ -704,6 +704,7 @@ ul.issue-index{
 	width: 70%;
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
 }
 
 .prev_article{
